<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_introduction">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.progressivelearning_android.ui.DashboardFragment"
        android:label="@string/dashboard_fragment_label"
        tools:layout="@layout/fragment_dashboard">
    </fragment>

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.progressivelearning_android.ui.ExploreFragment"
        android:label="@string/explore_fragment_label"
        tools:layout="@layout/fragment_explore">
    </fragment>

  <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.progressivelearning_android.ui.ProfileFragment"
        android:label="@string/profile_fragment_label"
        tools:layout="@layout/fragment_profile">
    </fragment>

    <fragment
        android:id="@+id/navigation_introduction"
        android:name="com.example.progressivelearning_android.ui.IntroductionFragment"
        android:label="@string/introduction_label"
        tools:layout="@layout/fragment_introduction">
        <action
            android:id="@+id/action_navigation_introduction_to_signup_fragment"
            app:destination="@id/navigation_signup" />
        <action
            android:id="@+id/action_navigation_introduction_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.example.progressivelearning_android.ui.SignupFragment"
        android:label="fragment_signup"
        tools:layout="@layout/fragment_signup" >
        <action
            android:id="@+id/action_navigation_signup_to_navigation_explore"
            app:destination="@id/navigation_explore" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.progressivelearning_android.ui.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_explore"
            app:destination="@id/navigation_explore"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

</navigation>