<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:minHeight="400dp"
    android:background="@color/white"
    tools:context=".ui.ResourcesDialogFragment">

    <TextView
        android:id="@+id/tv_resources"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_resources"
        android:theme="@style/header1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_resources"
        android:layout_width="400dp"
        android:layout_height="225dp"
        app:layout_constraintBottom_toTopOf="@+id/tip_resource_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />

    <TextView
        android:id="@+id/tv_new_resource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_resource"
        android:theme="@style/header2"
        app:layout_constraintBottom_toTopOf="@+id/tip_resource_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_resources"
        app:layout_constraintVertical_bias="0.346" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_resource_url"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginBottom="176dp"
        android:hint="@string/url"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_resource_url"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_resource_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginBottom="92dp"
        android:hint="@string/url_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent">

        <AutoCompleteTextView
            android:id="@+id/url_type_resource"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_resoure_btn"
        android:layout_width="68dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_resource_type"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_resoure_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_resource_type"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/times_icon"
        android:layout_width="32dp"
        android:layout_height="26dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_resources"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        app:tint="#FF0000" />


</androidx.constraintlayout.widget.ConstraintLayout>