<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateUnitFragment">

    <TextView
        android:id="@+id/tv_create_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/create_unit"
        android:theme="@style/header1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_lg_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_unit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_lg_summary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:layout_marginTop="12dp"
        android:hint="@string/summary"
        app:counterMaxLength="250"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_lg_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_summary"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_resources"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/black"
        android:text="@string/resources"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_unit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_lg_summary"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_create_unit"
        android:layout_width="203dp"
        android:layout_height="61dp"
        android:layout_marginBottom="50dp"
        android:text="@string/create_unit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_lg_summary"
        app:layout_constraintVertical_bias="0.951" />

</androidx.constraintlayout.widget.ConstraintLayout>